--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only index.ts",
-    "start-dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start-dev": "npx ts-node-dev --respawn --transpile-only src/nullUnknownNever.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
